--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,52 +1,46 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93938a">  <td>24/01/07 20:10:04</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;testbase.closebrowser()[pri:0, instance:org.ictaktest.com.testclass@351d00c0]">&lt;&lt;closebrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="93938a">  <td>24/01/07 20:09:23</td>   <td>-40775</td> <td>&nbsp;</td><td title="&gt;&gt;testbase.setup()[pri:0, instance:org.ictaktest.com.testclass@351d00c0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:09:43</td>   <td>-21335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tcabt()[pri:2, instance:org.ictaktest.com.testclass@351d00c0]">tcabt</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:09:56</td>   <td>-7662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tccontact()[pri:6, instance:org.ictaktest.com.testclass@351d00c0]">tccontact</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="64f761">  <td>24/01/07 20:10:04</td>   <td>-75</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ctestclass.tccou()[pri:0, instance:org.ictaktest.com.ctestclass@459e9125]">tccou</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:09:47</td>   <td>-17217</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tccou()[pri:3, instance:org.ictaktest.com.testclass@351d00c0]">tccou</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:10:00</td>   <td>-4302</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tccourse()[pri:7, instance:org.ictaktest.com.testclass@351d00c0]">tccourse</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:10:00</td>   <td>-4096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tccourselist()[pri:8, instance:org.ictaktest.com.testclass@351d00c0]">tccourselist</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:09:53</td>   <td>-10760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tcevents()[pri:5, instance:org.ictaktest.com.testclass@351d00c0]">tcevents</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:09:39</td>   <td>-25212</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tchme()[pri:1, instance:org.ictaktest.com.testclass@351d00c0]">tchme</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalbrief()[pri:8, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalbrief</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalexpects()[pri:9, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalexpects</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="64f761">  <td>24/01/07 20:10:04</td>   <td>-65</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ctestclass.tcinvalid()[pri:0, instance:org.ictaktest.com.ctestclass@459e9125]">tcinvalid</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalidaddress()[pri:4, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalidaddress</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-29</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvaliddis()[pri:5, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvaliddis</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalidemp()[pri:6, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalidemp</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalidfirm()[pri:4, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalidfirm</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-51</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalidname()[pri:2, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalidname</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-46</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalidphn()[pri:3, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalidphn</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalidsq()[pri:7, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalidsq</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcinvalpromoters()[pri:10, instance:org.ictaktest.com.ptestclass@128d2484]">tcinvalpromoters</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:10:01</td>   <td>-3437</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tclog()[pri:8, instance:org.ictaktest.com.testclass@351d00c0]">tclog</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="907483">  <td>24/01/07 20:09:50</td>   <td>-13858</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testclass.tcmember()[pri:4, instance:org.ictaktest.com.testclass@351d00c0]">tcmember</td> 
-  <td>main@617901222</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/01/07 20:10:04</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ptestclass.tcvalid()[pri:1, instance:org.ictaktest.com.ptestclass@128d2484]">tcvalid</td> 
-  <td>main@617901222</td>   <td></td> </tr>
+<tr bgcolor="6b83cc">  <td>24/01/08 18:02:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassNav.Homepage()[pri:0, instance:ictak.TestClassNav@e350b40]">Homepage</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="6cf3ea">  <td>24/01/08 18:02:38</td>   <td>3432</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassLogin.InValidTestcase()[pri:2, instance:ictak.TestClassLogin@d86a6f]">InValidTestcase</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="6cf3ea">  <td>24/01/08 18:02:38</td>   <td>3406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassLogin.ValidTestcase()[pri:1, instance:ictak.TestClassLogin@d86a6f]">ValidTestcase</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:37</td>   <td>3118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassEventsTachlon.clickEvent()[pri:-1, instance:ictak.TestClassEventsTachlon@63376bed]">clickEvent</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:38</td>   <td>3334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClassEventsTachlon.set()[pri:0, instance:ictak.TestClassEventsTachlon@63376bed]">&gt;&gt;set</td> 
+<td>&nbsp;</td>  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:38</td>   <td>3334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClassEventsTachlon.set()[pri:0, instance:ictak.TestClassEventsTachlon@63376bed]">&gt;&gt;set</td> 
+<td>&nbsp;</td>  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:38</td>   <td>3334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClassEventsTachlon.set()[pri:0, instance:ictak.TestClassEventsTachlon@63376bed]">&gt;&gt;set</td> 
+<td>&nbsp;</td>  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:38</td>   <td>3334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClassEventsTachlon.set()[pri:0, instance:ictak.TestClassEventsTachlon@63376bed]">&gt;&gt;set</td> 
+<td>&nbsp;</td>  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:38</td>   <td>3334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestClassEventsTachlon.set()[pri:0, instance:ictak.TestClassEventsTachlon@63376bed]">&gt;&gt;set</td> 
+<td>&nbsp;</td>  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="6cf3ea">  <td>24/01/08 18:02:38</td>   <td>3483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassLogin.setBlank_uname_passwd()[pri:5, instance:ictak.TestClassLogin@d86a6f]">setBlank_uname_passwd</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="6cf3ea">  <td>24/01/08 18:02:38</td>   <td>3469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassLogin.setWrong_uname()[pri:4, instance:ictak.TestClassLogin@d86a6f]">setWrong_uname</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:37</td>   <td>3276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassEventsTachlon.setdetailblank()[pri:0, instance:ictak.TestClassEventsTachlon@63376bed]">setdetailblank</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:38</td>   <td>3316</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassEventsTachlon.setdetailsinvalid_testcase_1()[pri:2, instance:ictak.TestClassEventsTachlon@63376bed]">setdetailsinvalid_testcase_1</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:38</td>   <td>3335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassEventsTachlon.setdetailsinvalid_testcase_2()[pri:3, instance:ictak.TestClassEventsTachlon@63376bed]">setdetailsinvalid_testcase_2</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="868090">  <td>24/01/08 18:02:37</td>   <td>3292</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassEventsTachlon.setdetailsvalid()[pri:1, instance:ictak.TestClassEventsTachlon@63376bed]">setdetailsvalid</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="92dae4">  <td>24/01/08 18:01:02</td>   <td>-91769</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setup()[pri:0, instance:ictak.TestClassNav@e350b40]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="6cf3ea">  <td>24/01/08 18:02:38</td>   <td>3457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassLogin.setwrongpass()[pri:3, instance:ictak.TestClassLogin@d86a6f]">setwrongpass</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>24/01/08 18:02:38</td>   <td>3396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassContact.testaddress()[pri:3, instance:ictak.TestClassContact@4145bad8]">testaddress</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>24/01/08 18:02:38</td>   <td>3373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassContact.testemail()[pri:2, instance:ictak.TestClassContact@4145bad8]">testemail</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>24/01/08 18:02:38</td>   <td>3363</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassContact.testnumber()[pri:1, instance:ictak.TestClassContact@4145bad8]">testnumber</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
+<tr bgcolor="b266b3">  <td>24/01/08 18:02:38</td>   <td>3350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestClassContact.testphonenclickContactUsNumber()[pri:0, instance:ictak.TestClassContact@4145bad8]">testphonenclickContactUsNumber</td> 
+  <td>main@1810458830</td>   <td></td> </tr>
 </table>
