--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,6 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>org.ictaktest.com.testbase.setup</td></tr>
-<tr><td>org.ictaktest.com.testbase.setup</td></tr>
-<tr><td>org.ictaktest.com.testbase.closebrowser</td></tr>
-<tr><td>org.ictaktest.com.testbase.closebrowser</td></tr>
+<tr><td>ictak.TestBase.setup</td></tr>
+<tr><td>ictak.TestBase.setup</td></tr>
+<tr><td>ictak.TestBase.setup</td></tr>
 </table>
